Fix a bug on iOS where close button and bot button are both visible

--- a/resources/assets/sass/1-interface-objects/_4-chat-window.scss
+++ b/resources/assets/sass/1-interface-objects/_4-chat-window.scss
@@ -23,7 +23,7 @@
 }
 
 .chat-window.closed {
-  height: unset;
+  height: auto;
 }
 
 // 👇🏻👇🏻👇🏻 OLD style you might need for the comments tab and max/min buttons👇🏻👇🏻👇🏻
