--- a/resources/assets/sass/client-custom.scss
+++ b/resources/assets/sass/client-custom.scss
@@ -45,7 +45,7 @@
   .header-nav {
     display: none;
   }
-  height: 90px;
+  height: 140px;
   margin: 30px 0;
 }
 
@@ -93,7 +93,7 @@
   @media (min-width: 450px) {
     width: 370px;
     padding: 0 35px;
-    height: unset;
+    height: 90px;
   }
 }
 
